landing page fixed- removed content-center with align-content:stretch;

--- a/app/globals.css
+++ b/app/globals.css
@@ -34,8 +34,9 @@ main {
   flex-grow: 1;
   flex-direction: column;
   display: flex;
-  justify-content: center;
+  /*justify-content: center;*/
   align-items: center;
+  align-content: stretch;
 }
 
 footer {
